<resources>
    <string name="app_name">Newpsel</string>
    <string name="facebook_app_id">149114668611897</string>
    <string name="label_signup">Sign up</string>
    <string name="label_signin">Sign in</string>
    <string name="label_recovery_password">Recovery password</string>
    <string name="label_welcome">Welcome</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="label_add_feed">Add feed</string>
    <string name="label_feeds_categories">Feed categories</string>
    <string name="label_feeds_selection">Feeds selection</string>
    <string name="label_labels_list">Labels</string>
    <string name="label_labels_create">Create Label</string>
    <string name="label_dialog_title">Save to later</string>
    <string name="action_about">About</string>
    <string name="action_create_feed">Create Feed</string>
    <string name="action_save">Save</string>
    <string name="action_labels">Labels</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_drop_db">Drop DB</string>
    <string name="action_check">Check this</string>
    <string name="action_manual">Manual</string>
    <string name="action_speech">Speech</string>
    <string name="activity_articles">New articles</string>
    <string name="ts_successfully_saved">Successfully saved to </string>
    <string name="error_password_wrong">Wrong password</string>
    <string name="error_user_exists">User with this email already registered</string>
    <string name="error_306">Wrong feed url</string>
    <string name="error_310">Try again later</string>
    <string name="create_feed">Create feed</string>
    <string name="Feed">Feed</string>
    <string name="Feeds">Feeds</string>
    <string name="feed_list_empty">You do not have feeds</string>
    <string name="Title">Title</string>
    <string name="try_later">Try again in few minutes</string>
    <string name="error_connection">Aren\'t connection to the Internet</string>
    <string name="error_unknown">Error: Unknown error (see log)</string>
    <string name="error_http_unauthorized">Error: 401 unauthorized</string>
    <string name="error_http_forbidden">Error: 403 forbidden</string>
    <string name="error_http_not_found">Error: 404 not found</string>
    <string name="error_http_server_error">Error: 500 server error</string>
    <string name="error_http_other_error">Error: other HTTP error (see log)</string>
    <string name="error_ssl_rejected">Error: SSL certificate rejected</string>
    <string name="error_parse_error">Error: JSON parse failed</string>
    <string name="error_io_error">Error: I/O failure (server down?)</string>
    <string name="error_other_error">Error: unknown error (see log)</string>
    <string name="error_api_disabled">Error: Please enable external API access in tt-rss Settings - Advanced</string>
    <string name="error_api_unknown">Error: unknown API error (see log)</string>
    <string name="error_api_incorrect_usage">Error: incorrect API usage</string>
    <string name="error_login_failed">Error: username or password incorrect</string>
    <string name="error_invalid_api_url">Error: invalid API URL</string>
    <string name="error_ssl_hostname_rejected">Error: SSL hostname not verified</string>
    <string name="error_api_unknown_method">Error: unknown API method</string>
    <string name="error_network_unavailable">Error: network unavailable</string>
    <string name="error_language_tts">Sorry! Your device doesn\'t have %1$s language installed.</string>
    <string name="error_login_data">Error: wrong login data</string>
    <string name="error_email">Write a valid email</string>
    <string name="error_password_empty">Write a password</string>
    <string name="label_s">label</string>
    <string name="sent_change_password">We sent to you an email with link to create new password.</string>
    <string name="error_google_email_null">Person information is null</string>
    <string name="error_google_sign_in">Some problem with sign in. Try again in few minutes.</string>
    <string name="button_sync">sync</string>
    <string name="button_mark_all">all as read</string>
    <string name="button_add_feed">add feed</string>
    <string name="button_select_feed">select feed</string>
    <string name="sync_finished">Sync finished</string>
    <string name="button_share">Share</string>
    <string name="no_new_articles">Aren\'t new articles</string>
    <string name="drawer_item">New articles</string>
    <string name="drawer_dictations_items">Dictation articles</string>
    <string name="drawer_later_item">Saved articles</string>
    <string name="drawer_manage_feeds">Manage feeds</string>
    <string name="drawer_manage_labels">Manage labels</string>
    <string name="cm_logout">Log Out</string>
    <string name="cm_logout_confirm">Confirm log out.</string>
    <string name="button_dictate">Dictate</string>
    <string name="button_read_item">Read item</string>
    <string name="button_unread_item">Unread item</string>
    <string name="button_read_label">Label</string>
    <string name="button_start_dictate">Start dictate</string>
    <string name="button_read_dictate">Dictate</string>
    <string name="button_read_stop">Stop</string>
    <string name="button_pause">Pause</string>
    <string name="button_dictate_disabled">Dictation disabled</string>
    <string-array name="drawer_main_activity">
        <item>@string/drawer_item</item>
        <item>@string/drawer_later_item</item>
        <item>@string/drawer_dictations_items</item>
        <item>@string/drawer_manage_feeds</item>
        <item>@string/drawer_manage_labels</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="show_password">Show password</string>
    <string name="hint_url">Url</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_submit">Submit</string>
    <string name="button_recovery_password">Recovery password</string>
    <string name="color_read">#d3d3d3</string>
    <string name="color_unread">#f9f9f9</string>
    <string name="feed_title">Feed</string>
    <string name="is_stared">is stared</string>
    <string name="is_unread">is unread</string>
    <string name="has_label">has label</string>
    <string name="cm_mark_all_read">Mark all as read</string>
    <string name="cm_mark_all_read_confirm">Are you sure you want to mark all articles as read?</string>
    <string name="cm_mark_read">Mark as read</string>
    <string name="cm_mark_unread">Mark as unread</string>
    <string name="cm_mark_previous">Mark previous as read</string>
    <string name="cm_add_star">Favorite</string>
    <string name="cm_remove_star">Remove favorite</string>
    <string name="cm_share">Share</string>
    <string name="button_create_label">create label</string>
    <string name="txt_set_label">Set label %1$s.</string>
    <string name="txt_label_removed">Label %1$s removed.</string>
    <string name="nt_download">Download notification</string>
    <string name="nt_download_items_title_finished">Downloaded new dictations of headlines</string>
    <string name="nt_download_dictation_items_finished">Downloaded new dictations of saved articles.</string>
    <string name="nt_any_label">Select in preferences at less one label to sync saved articles.</string>
    <string name="button_details">Show details</string>
    <string name="button_add_label">Add label</string>
    <string name="button_backward">Backward</string>
    <string name="button_stop">Stop</string>
    <string name="button_forward">Forward</string>
    <string name="button_pause_play">Play / Pause</string>
    <string name="notification_last_track">Player stopped because was last track</string>
    <string name="player_nt_finish_titles">Finished dictation of headlines</string>
    <string name="player_nt_finish_dictations">Finished dictation of saved articles</string>
    <string name="player_start_problem">Are some problem to play this song</string>
    <string name="label_st">Settings</string>
    <string name="st_design">Design</string>
    <string name="st_text_size">Text size</string>
    <string name="st_text_size_s">Adjust size of article text</string>
    <string name="st_list_size">List size</string>
    <string name="st_list_size_s">Adjust size of list text</string>
    <string name="st_dictation_speed">Dictation speed</string>
    <string name="st_dictation_speed_s">Adjust dictation speed</string>
    <string name="st_dictation_quantity">Quantity of later articles</string>
    <string name="st_dictation_quantity_s">Adjust limit of dictations in device</string>
    <string name="st_dictation_preferences">Dictations preferences</string>
    <string name="st_dictations_download_title">Configure dictations download</string>
    <string name="st_dictation_titles">Titles dictation</string>
    <string name="st_dictation_enable_titles">Activate to enable dictation of news titles</string>
    <string name="st_dictation_later">Saved articles dictation</string>
    <string name="st_dictation_enable_later">Activate to enable dictation of saved articles</string>
    <string name="st_download_wifi_enable">Via WIFI</string>
    <string name="st_download_wifi_enable_text">Activate to download dictations only via WIFI</string>
    <string name="st_download_mobile_enable">Via mobile data</string>
    <string name="st_download_mobile_enable_text">Activate to enable download dictations via mobile data</string>
    <string name="st_notifications">Notifications</string>
    <string name="st_notifications_enable">Enable notifications</string>
    <string name="st_services">Services</string>
    <string name="st_items_download">Download news</string>
    <string name="st_battery_level_title">Min battery level</string>
    <string name="st_battery_level_s">Adjust minimum level of battery to download dictations</string>
    <string name="st_later_items_preferences">Saved articles preferences</string>
    <string name="st_later_items_titles">Saved articles</string>
    <string name="st_later_items_check">Activate to enable later articles download</string>
    <string name="st_later_items_quantity">Quantity of later articles</string>
    <string name="st_later_items_quantity_s">Adjust quantity of later articles in device</string>
    <string name="st_later_items_labels">Labels to sync</string>
    <string name="st_later_items_labels_s">Select from which download articles</string>
    <string name="widget_title">Newpsel - Dictations widget</string>
    <string name="about_nps">Newpsel (News Personal Selector) is personal project created with idea to help spend less time possible to be informed from your preferred sources.</string>
    <string name="about_write_us">Any opinion, suggestion, issue report will be very appreciated!</string>
    <string name="about_version">Current version: </string>
    <string name="about_web">Web:</string>
    <string name="app_web_url">www.newpsel.com</string>
    <string name="about_github">Github:</string>
    <string name="about_github_url">github.com/dpcat237/Newpsel-android</string>
    <string name="about_privacy_policy">Privacy policy:</string>
    <string name="about_privacy_policy_url">www.newpsel.com/privacypolicy</string>
    <string name="about_author">Author:</string>
    <string name="about_author_name">Denys Pasishnyi (@dpcat237)</string>
    <string name="about_write">Email:</string>
    <string name="about_email">newpsel@gmail.com</string>
</resources>