<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
            android:title="@string/st_design">
        <ListPreference
	        android:defaultValue="100"
	        android:entries="@array/st_text_size_list_titles"
	        android:entryValues="@array/st_text_size_list_values"
	        android:key="pref_text_size"
	        android:negativeButtonText="@null"
	        android:positiveButtonText="@null"
	        android:title="@string/st_text_size"
	        android:summary="@string/st_text_size_s" />
        <ListPreference
	        android:defaultValue="17"
	        android:entries="@array/st_list_size_list_titles"
	        android:entryValues="@array/st_list_size_list_values"
	        android:key="pref_list_size"
	        android:negativeButtonText="@null"
	        android:positiveButtonText="@null"
	        android:title="@string/st_list_size"
	        android:summary="@string/st_list_size_s" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/st_notifications">
        <SwitchPreference
            android:title="@string/st_notifications_enable"
            android:key="pref_notifications_enable"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/st_services">
        <SwitchPreference
            android:title="@string/st_items_download"
            android:key="pref_items_download_enable"
            android:summary="@string/st_later_items_check"
            android:defaultValue="false" />
        <PreferenceScreen android:title="@string/st_dictation_preferences">
            <SwitchPreference
                android:title="@string/st_dictation_titles"
                android:key="pref_dictation_title_enable"
                android:summary="@string/st_dictation_enable_titles"
                android:defaultValue="false"/>
            <SwitchPreference
                android:title="@string/st_dictation_later"
                android:key="pref_dictation_later_enable"
                android:summary="@string/st_dictation_enable_later"
                android:defaultValue="false" />
            <PreferenceCategory android:title="@string/st_dictations_download_title">
                <SwitchPreference
                    android:title="@string/st_download_wifi_enable"
                    android:key="pref_dictation_wifi_enable"
                    android:summary="@string/st_download_wifi_enable_text"
                    android:defaultValue="true" />
                <SwitchPreference
                    android:title="@string/st_download_mobile_enable"
                    android:key="pref_dictation_mobile_enable"
                    android:summary="@string/st_download_mobile_enable_text"
                    android:defaultValue="false" />
                <ListPreference
                    android:defaultValue="1.5f"
                    android:entries="@array/st_list_dictation_speed_titles"
                    android:entryValues="@array/st_list_dictation_speed_values"
                    android:key="pref_dictation_speed"
                    android:negativeButtonText="@null"
                    android:positiveButtonText="@null"
                    android:title="@string/st_dictation_speed"
                    android:summary="@string/st_dictation_speed_s" />
                <ListPreference
                    android:defaultValue="25"
                    android:entries="@array/st_list_dictation_quantity"
                    android:entryValues="@array/st_list_dictation_quantity"
                    android:key="pref_dictation_quantity"
                    android:dependency="pref_dictation_later_enable"
                    android:negativeButtonText="@null"
                    android:positiveButtonText="@null"
                    android:title="@string/st_dictation_quantity"
                    android:summary="@string/st_dictation_quantity_s" />
                <ListPreference
                    android:defaultValue="40.0f"
                    android:entries="@array/st_list_battery_level_titles"
                    android:entryValues="@array/st_list_st_battery_level_values"
                    android:key="pref_battery_level"
                    android:dependency="pref_dictation_later_enable"
                    android:negativeButtonText="@null"
                    android:positiveButtonText="@null"
                    android:title="@string/st_battery_level_title"
                    android:summary="@string/st_battery_level_s" />
            </PreferenceCategory>
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/st_later_items_preferences">
            <SwitchPreference
                android:title="@string/st_later_items_titles"
                android:key="pref_later_items_enable"
                android:summary="@string/st_dictation_enable_titles"
                android:defaultValue="false"/>
            <ListPreference
                android:defaultValue="50"
                android:entries="@array/st_list_later_items_quantity"
                android:entryValues="@array/st_list_later_items_quantity"
                android:key="pref_later_items_quantity"
                android:dependency="pref_later_items_enable"
                android:negativeButtonText="@null"
                android:positiveButtonText="@null"
                android:title="@string/st_later_items_quantity"
                android:summary="@string/st_later_items_quantity_s" />
            <MultiSelectListPreference
                android:key="pref_later_items_labels"
                android:dependency="pref_later_items_enable"
                android:title="@string/st_later_items_labels"
                android:summary="@string/st_later_items_labels_s"
                android:defaultValue="@array/empty_array" />
        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>