<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainMenu" >

    <item android:id="@+id/buttonDictate"
        android:icon="@drawable/ic_actionbar_dictate"
        android:showAsAction="ifRoom"
        android:title="@string/button_read_dictate"
        android:visible="false" />

    <item android:id="@+id/buttonSelectFeed"
        android:icon="@drawable/actionbar_icon_world"
        android:title="@string/button_select_feed"
        android:showAsAction="ifRoom|withText"
        android:visible="false" />

    <item android:id="@+id/buttonAddFeed"
          android:icon="@drawable/actionbar_add"
          android:title="@string/button_add_feed"
          android:showAsAction="ifRoom|withText"  />

    <item android:id="@+id/buttonCreateLabel"
        android:icon="@drawable/collections_new_label"
        android:title="@string/button_create_label"
        android:showAsAction="ifRoom|withText"
        android:visible="false" />

    <item android:id="@+id/buttonSync"
        android:icon="@drawable/actionbar_refresh"
        android:title="@string/button_sync"
        android:showAsAction="ifRoom|withText"
        android:visible="false" />

    <item
        android:id="@+id/buttonManual"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_manual" />

    <item
        android:id="@+id/buttonActionSettings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />

    <item
        android:id="@+id/actionLogout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_logout" />
    
    <item
        android:id="@+id/buttonAbout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about" />

    <!--<item
        android:id="@+id/buttonPlayer"
        android:orderInCategory="100"
        android:showAsAction="never"
        ndroid:title="Player" />-->

</menu>