<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/buttonDictate"
        android:icon="@drawable/ic_actionbar_dictate"
        android:showAsAction="ifRoom"
        android:title="@string/button_start_dictate"
        android:visible="false" />
    <item android:id="@+id/buttonStop"
        android:icon="@drawable/av_stop"
        android:showAsAction="ifRoom"
        android:title="@string/button_read_stop"
        android:visible="false" />
    <item android:id="@+id/buttonRead"
        android:icon="@drawable/actionbar_icon_read"
        android:showAsAction="ifRoom"
        android:title="@string/button_read_item"  />
    <item android:id="@+id/buttonUnread"
        android:icon="@drawable/actionbar_icon_unread"
        android:showAsAction="ifRoom"
        android:title="@string/button_unread_item"
        android:visible="false" />
    <item android:id="@+id/buttonLabel"
        android:icon="@drawable/collections_labels"
        android:showAsAction="ifRoom"
        android:title="@string/button_read_label" />
    <item android:id="@+id/buttonShare"
        android:showAsAction="ifRoom"
        android:title="@string/button_share"
        android:actionProviderClass="android.widget.ShareActionProvider" />
</menu>