<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC080404" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_alignParentTop="true" >
        <ImageButton
            android:id="@+id/buttonDetails"
            android:gravity="left"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button_details"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_launcher" />
        <ImageButton
            android:id="@+id/buttonAddLabel"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button_add_label"
            android:scaleType="fitCenter"
            android:src="@drawable/collections_labels_white" />
        <ImageButton
            android:id="@+id/buttonBackward"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button_forward"
            android:scaleType="fitCenter"
            android:src="@drawable/av_previous" />
        <ImageButton
            android:id="@+id/buttonPausePlay"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button_pause_play"
            android:scaleType="fitCenter"
            android:src="@drawable/av_play_white" />
        <ImageButton
            android:id="@+id/buttonForward"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:background="@android:color/transparent"
            android:contentDescription="@string/button_forward"
            android:scaleType="fitCenter"
            android:src="@drawable/av_next" />
    </LinearLayout>

    <TextView
        android:background="#CC5a5a5a"
        android:layout_width = "fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_height="1dip"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true" >
        <TextView
            android:id="@+id/songTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="7dp"
            style="@style/WidgetSongTitle"
            android:text="@string/widget_title" >
        </TextView>
    </LinearLayout>

</RelativeLayout>